--- a/bookmarks/Blogs.html
+++ b/bookmarks/Blogs.html
@@ -7,6 +7,8 @@
 	<DL><p>
 		<DT><H3 FOLDED>CPE Blogs</H3>
 		<DL><p>
+			<DT><A HREF="https://www.macosadventures.com">macOS Adventures</A>
+			<DT><A HREF="https://bigmacadmin.wordpress.com">BigMacAdmin</A>
 			<DT><A HREF="https://jc0b.computer/">jc0b.computer</A>
 			<DT><A HREF="https://bryson3gps.wordpress.com/">Bryson Tyrrell – Personal Blog</A>
 			<DT><A HREF="https://grahamrpugh.com/">What The Mac?! - Graham Pugh</A>
